plugins {
    id 'java-library'
}

sourceCompatibility=14
targetCompatibility=14

repositories {
    jcenter()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

test {
    jvmArgs(['--enable-preview', '-XX:+ShowCodeDetailsInExceptionMessages'])

    useJUnitPlatform()
}
